--- a/6-cuboid/cuboid.html
+++ b/6-cuboid/cuboid.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>change shader</title>
+    <title>cuboid</title>
 </head>
 <body>
 <canvas id="canvas" width="400px" height="400px"></canvas>
 
+<script src="../libs/cuon-matrix.js"></script>
 <script src="../libs/co.js"></script>
-<script src="change-shader.js"></script>
+<script src="cuboid.js"></script>
 </body>
 </html>
