--- a/1-draw-point/draw-point.html
+++ b/1-draw-point/draw-point.html
@@ -7,6 +7,7 @@
 <body>
 <canvas id="canvas" width="400px" height="400px"></canvas>
 
+<script src="../libs/co.js"></script>
 <script src="draw-point.js"></script>
 </body>
 </html>
