--- a/3-buffer/buffer.html
+++ b/3-buffer/buffer.html
@@ -7,6 +7,7 @@
 <body>
 <canvas id="canvas" width="400px" height="400px"></canvas>
 
+<script src="../libs/co.js"></script>
 <script src="buffer.js"></script>
 </body>
 </html>
