--- a/5-multi-triangles/multi-triangles.html
+++ b/5-multi-triangles/multi-triangles.html
@@ -8,6 +8,7 @@
 <canvas id="canvas" width="400px" height="400px"></canvas>
 
 <script src="../libs/cuon-matrix.js"></script>
+<script src="../libs/co.js"></script>
 <script src="multi-triangles.js"></script>
 </body>
 </html>
