change html title

--- a/3-buffer/buffer.html
+++ b/3-buffer/buffer.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>buffer</title>
+    <title>缓冲区</title>
 </head>
 <body>
 <canvas id="canvas" width="400px" height="400px"></canvas>
