--- a/4-color/color.html
+++ b/4-color/color.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>color</title>
+    <title>控制片元着色器</title>
 </head>
 <body>
 <canvas id="canvas" width="400px" height="400px"></canvas>
