--- a/6-cuboid/cuboid.html
+++ b/6-cuboid/cuboid.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>cuboid</title>
+    <title>绘制矩形体-利用顶点索引</title>
 </head>
 <body>
 <canvas id="canvas" width="400px" height="400px"></canvas>
