--- a/1-shader-source/shader-source.html
+++ b/1-shader-source/shader-source.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>draw point</title>
+    <title>顶点着色器与片元着色器</title>
 </head>
 <body>
 <canvas id="canvas" width="400px" height="400px"></canvas>
 
 <script src="../libs/co.js"></script>
-<script src="draw-point.js"></script>
+<script src="shader-source.js"></script>
 </body>
 </html>
