--- a/2-change-shader/change-shader.html
+++ b/2-change-shader/change-shader.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>change shader</title>
+    <title>编辑顶点着色器</title>
 </head>
 <body>
 <canvas id="canvas" width="400px" height="400px"></canvas>
