--- a/5-matrix-transform/matrix-transform.html
+++ b/5-matrix-transform/matrix-transform.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>multi-triangles</title>
+    <title>矩阵变换绘制3D图形</title>
 </head>
 <body>
 <canvas id="canvas" width="400px" height="400px"></canvas>
 
 <script src="../libs/cuon-matrix.js"></script>
 <script src="../libs/co.js"></script>
-<script src="multi-triangles.js"></script>
+<script src="matrix-transform.js"></script>
 </body>
 </html>
