--- a/7-mouse/mouse.html
+++ b/7-mouse/mouse.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>mouse</title>
+    <title>场景交互-通过鼠标控制视角</title>
 </head>
 <body>
 <canvas id="canvas" width="400px" height="400px"></canvas>
